# admin-layers

./: .gitignore  ANVIL_DEPLOY.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  QUICK_START.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_bulk_edit.csv  sample_bulk_edit_full.csv  setup.ps1  start.ps1
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
anvil_app/: README.md  anvil.yaml
anvil_app/client_code/forms/: LoginForm.py  MainForm.yaml  QueueManagerForm.py  UserManagerForm.py
anvil_app/server_code/: demo_mode.py
client_code/: __init__.py
client_code/forms/: GroupManagerForm.py  MainForm.py  MainForm.yaml  SkillManagerForm.py  __init__.py  _anvil_designer.py
core/: __init__.py  demo.py  diagnostics.py  encrypted_storage.py  services.py
docs/: genesys_flows.md
genesys_cloud/: __init__.py  api.py  auth.py  config.py
server_code/: __init__.py  genesys_api.py
tests/: test_demo.py  test_diagnostics.py  test_services.py
utilities/: TEMPLATE.py  __init__.py  audit_report.py  base.py  chat_assistant.py  group_manager.py  history.py  queue_manager.py  skill_manager.py  user_manager.py
